# Compilers-c-cs340-

phase1/: Makefile  input.txt  scanner.l
phase2/: Makefile  SymbolTable.cpp  SymbolTable.h  parser.y
phase2/phase 2 tests/phase2/Errors/: Error12.asc
phase3/: Makefile  alpha.cpp  alpha.h  parser.y
phase3/phase 3 tests/phase 3 oliki tests/tests/: p3t_basic_expr.asc
phase3_partial/: Makefile  SymbolTable.cpp  SymbolTable.h  alpha.cpp  alpha.h  parser.y
phase4/: .gitignore  CMakeLists.txt  Makefile  SymbolTable.cpp  SymbolTable.h  alpha.cpp  alpha.h  instruction.h  parser.y  quad_to_instruction.cpp  quad_to_instruction.h  scanner.l  test
phase4/phase 4 tests/tests/: p3t_funcdecl.asc
phase5/: .gitignore  CMakeLists.txt  Makefile  VirtualMachine.cpp  VirtualMachine.h  VirtualMachineMemory.cpp  VirtualMachineMemory.h  main.cpp
